deploy/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ytd
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: ws
      port: 81
      targetPort: 5000
